--- a/views/blogpost.ejs
+++ b/views/blogpost.ejs
@@ -1,9 +1,11 @@
 <%- include("partials/header.ejs") %>
     <h1>Selected Key and Value</h1>
-    <p><strong>Key:</strong>
-        <%= key %>
-    </p>
-    <p><strong>Value:</strong>
-        <%= value %>
-    </p>
+    <div class="container">
+        <p><strong>Key: </strong>
+            <%= key %>
+        </p>
+        <p><strong> Value: </strong>
+            <%= value %>
+        </p>
+    </div>
     <%- include("partials/footer.ejs") %>
