prevent submitting an empty form

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,11 +16,12 @@
     </div>
 
     <div class="form-container">
-      <form action="/submit" method="POST">
+      <form action="/submit" method="POST" onsubmit="return validateForm()">
         <input type="text" placeholder="Title" name="post-title">
         <textarea placeholder="Enter your post here" name="blog-post"></textarea>
         <input type="submit" value="Add new post">
       </form>
     </div>
   </div>
+
   <%- include("partials/footer.ejs") %>
