--- a/views/blogpost.ejs
+++ b/views/blogpost.ejs
@@ -15,8 +15,17 @@
                     <% }); %>
             </ul>
         </div>
-        <p><strong> Value: </strong>
-            <%= value %>
-        </p>
+        <div>
+            <% Object.entries(value).forEach(([date, content])=> { %>
+                <div>
+                    <p><strong>Content:</strong>
+                        <%= content %>
+                    </p>
+                    <p><strong>Date:</strong>
+                        <%= date %>
+                    </p>
+                </div>
+                <% }); %>
+        </div>
     </div>
     <%- include("partials/footer.ejs") %>
