--- a/views/partials/list.ejs
+++ b/views/partials/list.ejs
@@ -5,7 +5,9 @@
             <li>
                 <a href="/blogpost?key=<%= key %>">
                     <%= key %>
-                        <img src="/icons/trash.svg" alt="Trash Icon"> <!-- Trash icon -->
+                </a>
+                <a href="/deletePost?key=<%= key %>"> <img src="/icons/trash.svg" alt="Trash Icon">
+                    <!-- Trash icon -->
                 </a>
             </li>
             <% }); %>
