deleting postst from json object

--- a/views/partials/list.ejs
+++ b/views/partials/list.ejs
@@ -6,7 +6,7 @@
                 <a href="/blogpost?key=<%= key %>">
                     <%= key %>
                 </a>
-                <a href="/deletePost?key=<%= key %>"> <img src="/icons/trash.svg" alt="Trash Icon">
+                <a href="/deletepost?key=<%= key %>"> <img src="/icons/trash.svg" alt="Trash Icon">
                     <!-- Trash icon -->
                 </a>
             </li>
