--- a/views/partials/list.ejs
+++ b/views/partials/list.ejs
@@ -6,7 +6,10 @@
                 <a href="/blogpost?key=<%= key %>">
                     <%= key %>
                 </a>
-                <a href="/deletepost?key=<%= key %>"> <img src="/icons/trash.svg" alt="Trash Icon">
+                <a href="/edit?key=<%= key %>"> <img src="/icons/edit-flip-h.svg" alt="Edit Icon">
+                    <!-- Edit icon -->
+                </a>
+                <a href="/delete?key=<%= key %>"> <img src="/icons/trash.svg" alt="Trash Icon">
                     <!-- Trash icon -->
                 </a>
             </li>
